style update style configuration
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>